# artemis_crib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mapper.conf  pyproject.toml  setmuxprm.sh
.github/workflow/: deploy.yml
ana/: .gitignore  animation.py  chkObjects.py  chka2p_events.C  constant_si26ap.py  doAllSimulation.py  fig_raw.ipynb  geo_parameters.yaml  geometry.py  mkGenerator.py  mkObjects.C  mkRawTexts.C  mkSimTexts.C  mkSyserr.C  mkYield.ipynb  mksim_text.C  mkyield_text.C  plot_crosssection.ipynb  plot_for_paper.ipynb  reconstSimulation.py  simAll.sh  simEventLoop.C  test.py
ana/txt/: aa.L01  (+117 more)
docs/: build_docs_local.sh  mdbook_test.sh
macro/: MUXParamMaker.C  chkmuxpos.C  run_MUXParamMaker.C
src-crib/: CMakeLists.txt  TBranchCopyProcessor.cc  TBranchCopyProcessor.h  TChannelSelector.cc  TChannelSelector.h  TEvtNumProcessor.h  TF1PPACProcessor.h  TMapSelector.cc  TMapSelector.h  TModuleData.h  TProcessorUtil.h  TScalerMonitorProcessor.h  TSegmentOutputProcessor.h  TSimpleVectorData.cc  TSimpleVectorData.h  TTimingChargeAllMappingProcessor.h  TTimingDataMappingProcessor.h  artcrib_linkdef.h
src-crib/main/: CMakeLists.txt  custom_hadd.cpp
steering/: chkbeamcoin_after.yaml  chkbeamcoin_before.yaml  chkf3.yaml  geo_example.yaml  procTGTIK.yaml  procTGTIK_al25.yaml  procTGTIK_mg24.yaml  procTGTIK_si26.yaml  simEffThickness.yaml  simSolidAngle_al25.yaml  simSolidAngle_mg24.yaml  simSolidAngle_si26.yaml  simTGTIK.yaml  simTGTIK_syserror.yaml  simTGTIK_syserror_al25.yaml  simTGTIK_syserror_mg24.yaml  simTGTIK_syserror_si26.yaml  test.yaml  tref.yaml
(+411 files in other folders)
